# prescience_helper_exe

./: .gitignore  CMakeLists.txt  README.md  todo.txt
csv_to_combatratingsmultbyilvl/src/: csv_to_combatratingsmultbyilvl.cpp
csv_to_include/include_private/csv_to_include/: csv_to_include.hpp
csv_to_include/src/: csv_to_include.cpp
csv_to_itemsparse/src/: csv_to_itemsparse.cpp
csv_to_randproppoints/src/: csv_to_randproppoints.cpp
csv_to_spelleffect/src/: csv_to_spelleffect.cpp
csv_to_spellmisc/src/: csv_to_spellmisc.cpp
include_private/prescience_helper/sim/: spells.hpp
include_private/prescience_helper_lib/: dbc_constants.hpp  sim.hpp  spells.hpp
include_private/prescience_helper_lib/specs/: aug.hpp
include_public/prescience_helper/: ingest.hpp  log_finder.hpp  sim.hpp  sqlite3_wrapper.hpp
prescience_helper/include_private/prescience_helper/: log_finder.hpp  serialize.hpp  sqlite3_wrapper.hpp
prescience_helper/src/: exe.cpp  log_finder.cpp  serialize.cpp  sqlite3_wrapper.cpp
prescience_helper_lib/include_private/prescience_helper/sim/: dbc_constants.hpp  helpers.hpp  spells.hpp
prescience_helper_lib/include_private/prescience_helper/sim/dbc/: combat_ratings_mult_by_ilvl.hpp  item_sparse.hpp  rand_prop_points.hpp  spell_effect.hpp  spell_misc.hpp
prescience_helper_lib/include_private/prescience_helper/sim/specs/: aug.hpp
prescience_helper_lib/include_public/prescience_helper/: ingest.hpp  sim.hpp
prescience_helper_lib/include_public/prescience_helper/sim/: on_rails.hpp
prescience_helper_lib/src/: helpers.cpp  ingest.cpp  on_rails.cpp  sim.cpp  spells.cpp
prescience_helper_lib/src/dbc/: combat_ratings_mult_by_ilvl.cpp  rand_prop_points.cpp  spell_effect.cpp  spell_misc.cpp
prescience_helper_lib/src/specs/: aug.cpp
scratch/src/: scratch.cpp
src/: exe.cpp  ingest.cpp  log_finder.cpp
src/prescience_helper/: exe.cpp  sqlite3_wrapper.cpp
src/prescience_helper_lib/: dbc_constants.cpp  ingest.cpp  sim.cpp  spells.cpp
src/prescience_helper_lib/specs/: aug.cpp
